# flash-qc

./: .dockerignore  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .sops.yaml  .sqlfluff  CADDY_SETUP.md  Caddyfile  Caddyfile.local  Cargo.toml  README.md  TODO.md  docker-compose.yml  mise.toml  nginx.conf  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  setup.sh  taplo.toml  tsconfig.base.json  tsconfig.json
.github/: dependabot.yml
.github/workflows/: astro-ci-mise.yml  astro-ci.yml  clippy.yml  deploy.yml  pre-commit-ci.yml  rust-ci-mise.yml  rust-ci.yml  sync-ci.yml  typescript-ci.yml
.sops/: deploy.enc.yaml  deploy_key.pub  git_deploy_key.pub
backend/: Cargo.toml  Dockerfile  Dockerfile.migrations
backend/migrations/00000000000000_diesel_initial_setup/: up.sql
backend/migrations/2025-08-30-095602_database_bootstrap/: down.sql  up.sql
backend/migrations/2025-09-21-161517_mock_data/: down.sql  up.sql
backend/migrations/2026-01-11-095428_rubiks_cube_deck/: down.sql  up.sql
backend/src/: .env  auth.rs  card.rs  deck.rs  fill_db_with_data.sql  lib.rs  main.rs  models.rs  routes.rs  schema.rs  utils.rs
backend/src/models/: card.rs  deck.rs  mod.rs  plugin.rs  training_event.rs
backend/src/root/: routes.rs
backend/src/root/templates/: under-construction.html
backend/src/system/: cors.rs  mod.rs  routes.rs
backend/src/utils/: db.rs  gen_error.rs  token_store.rs
db-state/: db_export_data.sql
diesel-poc/: Cargo.toml  diesel.toml
diesel-poc/diesel-poc-requests/: Root.bru  Tags.bru
diesel-poc/diesel-poc-requests/plugins/1_kanjis/: index.html
diesel-poc/migrations/2025-07-12-084226_create_tags/: up.sql
diesel-poc/migrations/2025-07-12-090819_add_uuid_to_tags/: up.sql
diesel-poc/src/: .env  lib.rs  main.rs  models.rs  schema.rs
docker-compose-poc/: docker-compose.yml
docker-compose-poc/backend/: .dockerignore  Cargo.toml  Dockerfile
docker-compose-poc/backend/src/: main.rs
docker-compose-poc/frontend/: package.json  pnpm-lock.yaml
docker-compose-poc/nginx/: nginx.conf
docs/: DataModel.excalidraw
docs/flash-qc-apispec/: Login.bru  Under Auth Test.bru  bruno.json
docs/flash-qc-apispec/environments/: dev.bru
frontend/: Dockerfile  astro.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/components/: DeckList.tsx  Login.module.css  Login.tsx  NavHeader.tsx
frontend/src/layouts/: Layout.astro
frontend/src/models/: plugin-message.ts
frontend/src/pages/: index.astro  landing.astro  landing.module.css  login.astro  logout.astro  profile.astro
frontend/src/scripts/: index.ts  login.ts  profile.ts
frontend/src/styles/: NavHeader.module.css  styles.css
plugins/da-vinci-facts/: da-vinci-facts-script.js  index.html
plugins/drawing-canvas/: Cargo.toml  index.html  package.json  styles.css
plugins/drawing-canvas/src/: lib.rs
plugins/dummy/: dummy-script.js  index.html
plugins/flip-word/: index.html  package-lock.json  package.json
plugins/flip-word/src/: flashcard.ts
plugins/hello-world-js/: index.html  package.json  styles.css  tsconfig.json
plugins/hello-world-js/src/: flashcard.ts
plugins/rubiks-cube/: Cargo.toml  index.html  package.json  styles.css
plugins/rubiks-cube/src/: lib.rs
plugins/rubiks-cube/src/cube/: mod.rs  moves.rs  state.rs
plugins/rubiks-cube/src/input/: animation.rs  mod.rs  mouse.rs
plugins/rubiks-cube/src/math/: matrix.rs  mod.rs  quaternion.rs  vector.rs
plugins/rubiks-cube/src/render/: camera.rs  geometry.rs  mod.rs  picking.rs  shaders.rs  webgl.rs
pocs/diesel-poc/: Cargo.toml
pocs/diesel-poc/diesel-poc-requests/: bruno.json
pocs/diesel-poc/src/: main.rs  schema.rs
pocs/docker-compose-poc/: README.md  docker-compose.yml
pocs/docker-compose-poc/backend/: Cargo.toml
pocs/docker-compose-poc/frontend/: astro.config.mjs  package.json
pocs/docker-compose-poc/postgres/: 01-init.sql
postgres/: .gitkeep
scripts/: check-sync.js
tools/flash-dev/: Cargo.toml
tools/flash-dev/src/: lib.rs  main.rs
tools/fqc/: Cargo.toml
tools/fqc/src/: lib.rs  (+2 more)
tools/scripts/: serve.sh
(+13 files in other folders)
