[package]
edition = "2024"
name = "flash-qc"
version = "0.1.0"

[dependencies]
diesel = {version = "2.2.0", features = ["postgres", "uuid"]}
# build libpq and openssl as part of the build process
# uncomment these lines if you run into setup issues
# pq-sys = { version = "0.6", features = ["bundled"] }
# openssl-sys = { version = "0.9.100", features = ["vendored"] } 
dotenvy = "0.15"
rocket = {version = "0.5.1", features = ["serde_json", "json", "uuid"]}
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.141"
uuid = {version = "1.17.0", features = ["serde", "v4"]}
