[package]
name = "drawing-canvas"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.104"

[dependencies.web-sys]
version = "0.3.77"
features = [
  "console",
  "Window",
  "Document",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "MouseEvent",
]
