[package]
name = "rubiks-cube"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.105"
js-sys = "0.3.82"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.web-sys]
version = "0.3.82"
features = [
  "console",
  "Window",
  "Document",
  "HtmlCanvasElement",
  "Performance",
  "WebGlRenderingContext",
  "WebGlProgram",
  "WebGlShader",
  "WebGlBuffer",
  "WebGlUniformLocation",
  "MouseEvent",
  "EventTarget",
]

[profile.release]
opt-level = "s"
lto = true
